# android_tools_leeco_msm8996

bt/hci_qcomm_init/: AEEStdDef.h  AEEstd.h  Android.mk  Makefile  Makefile.am  autogen.sh  bt_nv.cpp  bt_nv.h  bt_qmi_dms_client.c  bt_qmi_dms_client.h  bt_qsoc_nvm_BAHAMA_A0.c  bt_qsoc_nvm_BAHAMA_B0.c  bt_qsoc_nvm_BAHAMA_B1.c  bt_qsoc_nvm_BTS4020_BDB0_19P2Mhz.c  bt_qsoc_nvm_BTS4020_BDB0_32Mhz.c  bt_qsoc_nvm_BTS4020_BDB1_19P2Mhz.c  bt_qsoc_nvm_BTS4020_BDB1_32Mhz.c  bt_qsoc_nvm_BTS4020_R3_19P2Mhz.c  bt_qsoc_nvm_BTS4020_R3_32Mhz.c  bt_qsoc_nvm_BTS4021_B1_19P2Mhz.c  bt_qsoc_nvm_BTS4021_B1_32Mhz.c  bt_qsoc_nvm_BTS4025_B0_19P2Mhz.c  bt_qsoc_nvm_BTS4025_B0_32Mhz.c  bt_qsoc_nvm_BTS4025_B1_19P2Mhz.c  bt_qsoc_nvm_BTS4025_B1_32Mhz.c  bt_qsoc_nvm_BTS4025_B2_19P2Mhz.c  bt_qsoc_nvm_BTS4025_B2_32Mhz.c  bt_qsoc_nvm_BTS4025_B3_19P2Mhz.c  bt_qsoc_nvm_BTS4025_B3_32Mhz.c  bt_qsoc_nvm_MARIMBA_A0.c  bt_qsoc_nvm_MARIMBA_B0.c  bt_qsoc_nvm_MARIMBA_B1.c  bthci_qcomm.h  bthci_qcomm_common.c  bthci_qcomm_linux.cpp  bthci_qcomm_linux.h  bthci_qcomm_linux_uart.c  bthci_qcomm_pfal.h  btnvtool.cpp  btqsocnvm.c  (+12 more)
data/: Makefile.am  autogen.sh  configure.ac  data.pc.in
data/ATFWD-daemon/: Android.mk  AtCmdFwd.h  IAtCmdFwd.cpp  IAtCmdFwdService.h  atfwd_daemon.c  sendcmd.cpp  sendcmd.h
data/bridgemgr/: Android.mk  bridgemgr.c  bridgemgr.h  bridgemgr_cmdq.c  bridgemgr_cmdq.h  bridgemgr_common.c  bridgemgr_common.h  bridgemgr_mdm_qmi.c  bridgemgr_mdm_qmi.h  bridgemgr_port_switch.c  bridgemgr_port_switch.h  bridgemgr_qmi_proxy.c  bridgemgr_qmi_proxy.h  bridgemgr_usb_qmi.c  bridgemgr_usb_qmi.h
data/commandSvc/: Android.mk  CommandApi.cpp  CommandApi.h  IPhoneService.cpp  IPhoneService.h
data/configdb/: Makefile.am  autogen.sh  configdb.pc.in  configure.ac
data/dsucsd/: Android.mk
data/dsutils/: Makefile.am  configure.ac  dsutils.pc.in
data/ipacm-diag/: Android.mk
data/port-bridge/: Android.mk  Makefile.am  configure.ac  dun_kevents.c  dun_service.c  port_bridge.c  port_bridge.h  qcom_dun_hsusb.sh
data/qti_v2/: Android.mk
data/radish/: Android.mk  Makefile.am  config.c  config.h  icmpv6.c  icmpv6.h  list.h  r_iptypes.h  r_ipv6.h  radish.c  radish.h
data/usbhub/: Android.mk  usbhub.c
data/usbhub_init/: Android.mk  usbhub_init.c
diag/CallBack_Client/: Android.mk  Makefile.am  diag_callback_client.c
diag/qshrink4_daemon/: Android.mk  Makefile.am  diag_qshrink4_daemon.c  start_diag_qshrink4_daemon
fm/: Makefile.am  autogen.sh  configure.ac
fm/debian/: changelog  control  fm.install  rules
fm/fmfactorytest/: Android.mk  fmfactorytestclient.c
fm/fmfactorytestserver/: Android.mk  FmRadioController_qcom.cpp  FmRadioController_qcom.h  QcomFmIoctlsInterface.cpp  QcomFmIoctlsInterface.h  Qualcomm_FM_Const.h  fmfactorytestserver.cpp
fm/fmtest/: Android.mk  Makefile.am  fmcommon.h  fmhalapis.h  fmhalcmds.c  main.c
fm/hal_ss_test/: Android.mk  ConfFileParser.cpp  ConfFileParser.h  ConfigFmThs.cpp  ConfigFmThs.h  FmPerformanceParams.cpp  FmPerformanceParams.h  FmRadioController_qcom.cpp  FmRadioController_qcom.h  Makefile.am  QcomFmIoctlsInterface.cpp  QcomFmIoctlsInterface.h  Qualcomm_FM_Const.h  Qualcomm_FM_Test_HAL_Layer.cpp  fm_srch_af_th.conf
fm/patch_downloader/: Android.mk  Makefile.am  fm_qsoc_patches.c
kernel-tests/: Android.mk  KernelModule.am  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  test_env_setup.sh
kernel-tests/TEMPLATE/: Makefile.am  README.txt  configure.ac  run.sh  template.bb  xyz.c
kernel-tests/adc/: Android.mk  Makefile.am  README  msm_adc_test.c
kernel-tests/cacheflush/: Android.mk  Makefile.am  README.txt  _cacheflush.sh  cacheflush.c  cacheflush.sh  loop.sh  run.sh
kernel-tests/clk/: Android.mk  Makefile.am  README  clk.mk  clk_test.sh  run.sh
kernel-tests/clocksource/: Android.mk  Makefile.am  README.txt  clocksourcetest.sh  run.sh
kernel-tests/cpu/: Android.mk  Makefile.am  README.txt  cpuhotplug_test.sh  cputest.sh  run.sh
kernel-tests/cpufreq/: Android.mk  Makefile.am  cpufreq_test.sh
kernel-tests/debian/: changelog  control  kernel-tests.dirs  kernel-tests.install  rules
kernel-tests/dmov/: Android.mk  Makefile.am  README.txt  dma_test.h  dmov.mk  msm_dma.c  msm_dma.sh
kernel-tests/fbtest/: AR_LUT_1_0_B  AR_LUT_1_0_B0  AR_LUT_1_0_G  AR_LUT_1_0_G0  AR_LUT_1_0_R0  Android.mk  Makefile.am  README.txt  SanityCfg.cfg  ad_cfg.txt  ad_init.txt  cmdfile  cursor.zif  fbtest.c  fbtest.h  fbtest.mk  fbtest.sh  fbtestUtils.c  fbtestUtils.h  lb.zif  mdp11_CbCr_10F.zif  mdp11_Y_10F.zif  mdp3.c  mdp3.h  mdp4.c  mdp4.h  postproctest.c  postproctest.h  r_only_igc  run.sh
kernel-tests/gpio_tlmm/: Android.mk  Makefile.am  README.txt  gpio_lib.conf  gpio_lib.sh  gpio_tlmm.conf  gpio_tlmm.sh  run.sh
kernel-tests/i2c-msm/: Android.mk  Makefile.am  README.txt  i2c-msm-test.c  i2c-msm-test.sh  i2c-msm.mk  run.sh
kernel-tests/irq/: Android.mk  Makefile.am  irq_test.sh
kernel-tests/mpp/: Android.mk  Makefile.am  README  mpp_test.sh  run.sh
kernel-tests/msm_uart/: Android.mk  Makefile.am  README.txt  msm_uart.mk  msm_uart_test.c  msm_uart_test.sh  probe_test.sh  run.sh
mm-camera/: Android.mk  Makefile.am  camera.mk  configure.ac  local_additional_dependency.mk  malloc_wrap_static_library.mk  override_mem_alloc_dealloc.am
mm-core/: Android.mk  Makefile.am  configure.ac
qmi/: Makefile.am  configure.ac  qmi.mk  qmi.pc.in  qmilib.mak
qmi-framework/: Makefile.am  autogen.sh  configure.ac  qmi-framework.mk  qmi-framework.pc.in
remotefs/: Android.mk  Makefile.am  configure.ac
tftp/: Android.mk  Makefile.am  configure.ac  tftp_server.sh
thermal-engine/: Android.mk  Makefile.am  configure.ac  pid-data.c  pid_algorithm.c  pid_algorithm.h  readme.txt  speaker_cal-data.c  speaker_cal.c  speaker_cal.h  ss-data.c  ss_algorithm.c  ss_algorithm.h  start_thermal-engine_le  target-8939-algo.c  thermal-engine-8226.conf  thermal-engine-8610.conf  thermal-engine.mk  thermal.c  thermal_config.c  thermal_config_v2.c  thermal_monitor-data-8916.c  thermal_monitor-data.c  thermal_monitor.c  thermal_util.c
xmllib/: Makefile.am  configure.ac  xmllib.pc.in
(+12632 files in other folders)
